:bug: Fix alignment of ButonDropdowns

--- a/src/components/toolbox/dropdownButton/dropdownButton.css
+++ b/src/components/toolbox/dropdownButton/dropdownButton.css
@@ -5,5 +5,7 @@
   & .dropdown {
     min-width: 349px;
     width: auto;
+    right: auto;
+    top: calc(100% + 10px);
   }
 }
